# Paracore

./: .editorconfig  .gitignore  Agent_Architecture_Unified.md  AutomationBrainstorming.md  CLOUD_FEATURES.md  CONTRIBUTING.md  CodeRunnerDebug.txt  Comparison with other automation tools.md  Create_Wall.cs  DEVELOPMENT.md  Folder_Structure.md  GEMINI.md  Input onChange fired 2.txt  Instruction.md  LICENSE  Modify_Wall_Parameters.cs  OAUTH_STRATEGY.md  PARACORE_APP_STORE_NOTE.md  PARAMETER_ENGINE.md  Paracore-installer.ps1  Paracore_Installer.iss  RAP Workflow.md  RAP-installer.ps1  RAP.sln  RAP_Installer.iss  README.md  README_Day03.md  ROADMAP.md  RServer-installer.ps1  RServer.Addin.addin  RServer_Installer.iss  Revit-Agent-ExecutionPlan.md  Revit_Context_Expansion_Ideas.md  SteelConnectionPlateGenerator.cs  TestParameterExtractor.cs  TestParser.cs  TestParser.csproj  Tutorial_02_Selection.md  WorkingSetTesting.md  advanced_agent_architecture.md  (+33 more)
rap-server/server/: AboutParacore.html  AboutParacore.md  README.md  auth.py  checkpoints.sqlite-shm  checkpoints.sqlite-wal  config.py  corescript_pb2.py  corescript_pb2.pyi  corescript_pb2_grpc.py  database_config.py  debug_context_call.py  grpc_client.py  main.py  models.py  pyproject.toml  render_markdown.py  reproduce_param_issue.py  requirements.txt  rscript_pb2.py  rscript_pb2_grpc.py  rserver_listener.py  schemas.py  test_logic_generator.py  test_working_set.py  utils.py  verify_context_tool.py  workspace_manager.py
rap-server/server/agent/: agent_router.py  api_helpers.py  create_manifest.py  graph.ipynb  graph.py  llm.py  mcp_client.py  nodes.py  prompt.py  schemas.py  simple_agent.py  state.py  summary_utils.py  system_prompt.py  tools.py  v3_agent.py
rap-server/server/agent/graph_nodes/: get_params.py  get_ui_params.py  list_scripts.py  preprocess.py  run_script.py  select_and_get_params.py  select_script.py
rap-server/server/agent/nodes/: __init__.py  agent_node.py  conditional_edges.py  execute_script_node.py  get_parameters_node.py  get_ui_parameters_node.py  parameter_node.py  search_node.py  search_scripts_node.py  select_script_node.py  (+7 more)
rap-server/server/api/: assist_router.py  auth_router.py  generator_router.py  manifest_router.py  playlist_router.py  presets_router.py  publish_router.py  runs_router.py  script_execution_router.py  script_management_router.py  status_router.py  tool_builder_router.py  user_settings_router.py  workspace_router.py
rap-server/server/cache/: script_library_manifest.json
rap-server/server/generation/: __init__.py  gemini_client.py  generation_router.py  system_prompt.py
rap-server/server/mcp/: mcp_server.py
rap-server/server/services/: playlist_service.py
rap-server/server/sync/: git_sync_service.py
rap-web/src-tauri/: Cargo - Copy.toml  Cargo.toml  tauri.conf.json
rap-web/src-tauri/assets/: requirements.txt
rap-web/src-tauri/capabilities/: default.json
rap-web/src-tauri/src/: main - Copy.rs  main.rs  main_bundle.rs  main_dev.rs  process_manager.rs
rap-web/src-tauri/wix/: cleanup.wxs
(+460 files in other folders)
