[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "^1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.3", features = [ "window-unmaximize", "window-start-dragging", "window-maximize", "window-hide", "http-all", "window-unminimize", "window-show", "os-all", "window-close", "window-minimize", "shell-open", "shell-execute", "process-exit", "path-all", "process-relaunch", "fs-all", "dialog-all", "notification-all"] }
tokio = { version = "1.x", features = ["full"] }
url = "2.x"
rand = "0.8"
tiny_http = "0.12"
webbrowser = "0.8"
log = "0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

# Feature for bundling the Python server
bundle-server = []
